add eigen, change git modules to use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "includes/tiny-cuda-nn"]
 	path = includes/tiny-cuda-nn
-	url = https://github.com/NVLabs/tiny-cuda-nn
+	url = https://github.com/NVLabs/tiny-cuda-nn.git
 [submodule "includes/json"]
 	path = includes/json
-	url = git@github.com:nlohmann/json
+	url = https://github.com/nlohmann/json.git
+[submodule "includes/eigen"]
+	path = includes/eigen
+	url = https://gitlab.com/libeigen/eigen.git
