--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -1,4 +1,5 @@
 # include submodules
 
-add_subdirectory(tiny-cuda-nn)
+add_subdirectory(eigen)
 add_subdirectory(json)
+add_subdirectory(tiny-cuda-nn)
