--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "includes/eigen"]
 	path = includes/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "includes/stb"]
+	path = includes/stb
+	url = https://github.com/nothings/stb.git
