add thrust-based find_last_lt_presorted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(HEADERS
 	src/utils/bit-utils.cuh
 	src/utils/coordinate-transformations.cuh
 	src/utils/json-bindings/eigen-json.h
+	src/utils/parallel-utils.cuh
 	src/utils/training-batch-kernels.cuh
 	src/utils/volumetric-rendering.cuh
 	src/common.h
