refactors - remove eigen & cmake adjustments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,19 @@
 ﻿# CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
 #
-cmake_minimum_required (VERSION 3.20)
+cmake_minimum_required (VERSION 3.25.1)
+
 
 cmake_policy(SET CMP0104 NEW)
 
 project (NeRFRenderCore LANGUAGES CUDA CXX)
 
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+
 
 # CUDA
 include(FindCUDA/select_compute_arch)
@@ -24,7 +27,6 @@ find_package(CUDA 12.0 REQUIRED)
 include_directories(${CUDA_INCLUDE_DIRS})
 
 # Include sub-projects.
-add_subdirectory(includes/eigen)
 
 set(TCNN_BUILD_EXAMPLES OFF)
 set(TCNN_BUILD_BENCHMARK OFF)
@@ -34,32 +36,42 @@ add_subdirectory(includes/tiny-cuda-nn)
 # src project
 
 set(HEADERS
+	# controllers
 	src/controllers/nerf-training-controller.h
+
+	# models
 	src/models/bounding-box.cuh
-	src/models/camera.h
+	src/models/camera.cuh
 	src/models/cascaded-occupancy-grid.cuh
 	src/models/dataset.h
 	src/models/nerf-network.h
 	src/models/ray.h
-	src/models/training-image.h
-	src/models/training-workspace.h
+	src/models/rays.h
+	src/models/rendering-workspace.h
+	src/models/training-image.cuh
+	src/models/training-workspace.cuh
+	src/models/workspace.cuh
+
+	# utils
 	src/utils/gpu-image.cuh
 	src/utils/bit-utils.cuh
 	src/utils/coordinate-transformations.cuh
-	src/utils/json-bindings/eigen-json.h
+	src/utils/linalg.cuh
 	src/utils/parallel-utils.cuh
 	src/utils/training-batch-kernels.cuh
 	src/utils/training-network-kernels.cuh
 	src/utils/volumetric-rendering.cuh
+
+	# common
 	src/common.h
 	src/main.h
 )
 
 set(SOURCES
 	src/controllers/nerf-training-controller.cu
-	src/models/camera.cu
 	src/models/dataset.cu
 	src/models/nerf-network.cu
+	src/models/rendering-workspace.cu
 	src/models/training-image.cu
 	src/models/training-workspace.cu
 	src/main.cu	
@@ -69,9 +81,6 @@ add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
 # CUDA includes / linkage
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    CXX_STANDARD 17
-    CXX_EXTENSIONS OFF
-	CUDA_STANDARD 17
 	CUDA_RESOLVE_DEVICE_SYMBOLS ON
 	CUDA_SEPARABLE_COMPILATION ON
 )
@@ -80,6 +89,5 @@ target_link_libraries(${PROJECT_NAME}
 	PUBLIC
 	${CUDA_LIBRARIES}
 	curand
-	eigen
 	tiny-cuda-nn
 )
