refactors & additions (better quality!)
* Occupancy Grid Updating code
* Lots of little bug fixes
* Improve Rendering Quality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeList.txt : Top-level CMake project file, do global configuration
+﻿# CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
 #
 cmake_minimum_required (VERSION 3.24)
@@ -67,6 +67,7 @@ set(HEADERS
 	src/utils/linalg/transform4f.cuh
 	src/utils/linalg.cuh
 	src/utils/nerf-constants.cuh
+	src/utils/occupancy-grid-kernels.cuh
 	src/utils/parallel-utils.cuh
 	src/utils/rendering-kernels.cuh
 	src/utils/training-batch-kernels.cuh
@@ -94,6 +95,7 @@ set(SOURCES
 	# utils
 	src/utils/cu-compactor.cu
 	src/utils/gpu-image.cu
+	src/utils/occupancy-grid-kernels.cu
 	src/utils/rendering-kernels.cu
 
 	# common
