WIP, traveling, code to-go

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,6 +119,41 @@
         "string_view": "cpp",
         "bitset": "cpp",
         "cwctype": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "__functional_03": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "core": "cpp",
+        "superlusupport": "cpp",
+        "*.evaluator": "cpp",
+        "*.traits": "cpp",
+        "adolcforward": "cpp",
+        "autodiff": "cpp",
+        "bvh": "cpp",
+        "eulerangles": "cpp",
+        "fft": "cpp",
+        "kroneckerproduct": "cpp",
+        "mprealsupport": "cpp",
+        "nnls": "cpp",
+        "numericaldiff": "cpp",
+        "openglsupport": "cpp",
+        "specialfunctions": "cpp",
+        "splines": "cpp",
+        "__locale": "cpp",
+        "__string": "cpp",
+        "target": "cpp",
+        "*.inc": "cpp",
+        "memory_resource": "cpp",
+        "__config": "cpp",
+        "*.rh": "cpp",
+        "__preprocessor": "cpp",
+        "threadpool": "cpp",
+        "nonlinearoptimization": "cpp",
+        "__functional_base": "cpp",
+        "__functional_base_03": "cpp",
+        "__threading_support": "cpp",
+        "__tuple": "cpp",
+        "__memory": "cpp",
+        "version": "cpp"
     }
 }
