add color utils (and fast color utils)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(HEADERS
 
 	# utils
 	src/utils/bit-utils.cuh
+	src/utils/color-utils.cuh
 	src/utils/coordinate-transformations.cuh
 	src/utils/gpu-image.cuh
 	src/utils/linalg/transform4f.cuh
