--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "includes/tiny-cuda-nn"]
 	path = includes/tiny-cuda-nn
 	url = https://github.com/NVLabs/tiny-cuda-nn.git
+[submodule "includes/glfw"]
+	path = includes/glfw
+	url = https://github.com/glfw/glfw.git
