--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "includes/pybind11"]
 	path = includes/pybind11
 	url = git@github.com:pybind/pybind11.git
+[submodule "includes/RxCpp"]
+	path = includes/RxCpp
+	url = git@github.com:ReactiveX/RxCpp
