--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set(HEADERS
 	src/utils/nerf-constants.cuh
 	src/utils/occupancy-grid-kernels.cuh
 	src/utils/parallel-utils.cuh
+	src/utils/queues.h
 	src/utils/rendering-kernels.cuh
 	src/utils/stream-compaction.cuh
 	src/utils/training-batch-kernels.cuh
