attempted to use new Lion optimizer - failed  - maybe hyperparam tweaking or L2 reg?  - lion seems cool but needs more research to work w/ NeRF  + https://arxiv.org/abs/2302.06675  + https://github.com/google/automl/blob/master/lion/lion_pytorch.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,9 @@ set(HEADERS
 
 	# core
 	src/core/adam-optimizer.cuh
-	src/core/occupancy-grid.cuh
+	src/core/lion-optimizer.cuh
 	src/core/nerf-network.cuh
+	src/core/occupancy-grid.cuh
 	src/core/renderer.cuh
 	src/core/trainer.cuh
 
